--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
       <div class="jumbotron">
-          <h1 class="text center">
+          <h1 class="text-center">
               <span class="glyphicon glyphicon-fire"></span>
                Hot Restaurant
           </h1>
@@ -25,7 +25,7 @@
                 </a>
             <a href="view.tables">
                 <button type="button" class="btn btn-lg btn-default">Make Reservation</button>
-                <span clss="glypicon glypicon-credit-card">
+                <span class="glypicon glypicon-credit-card">
                     
                 </span>
             </a>
